avoid wrong width + button centering

--- a/src/scss/frames.scss
+++ b/src/scss/frames.scss
@@ -7,7 +7,6 @@
     margin: $padding 0 0 0;
     width: 100%;
     max-width: 100%;
-    min-width: $min-width;
 
     &.no-hd{
         border-image: url('./images/frame.png') 7 round;
