--- a/src/scss/input.scss
+++ b/src/scss/input.scss
@@ -13,6 +13,7 @@ button, .button{
     border: none;
     padding: 0 0 0 $padding;
     text-transform: uppercase;
+    text-align: left;
     cursor: pointer;
     
     &:hover::before{
